[package]
name = "warp_exp"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
log4rs = "1.0"
uuid = { version = "0.8", features = ["v4"] }

tracing = { version = "0.1", features=["log"]}
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

# local sub crate
handle-errors = { path = "handle-errors" }
